<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">


        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="תפריט ראשי"
            android:textSize="40sp" />


    </FrameLayout>


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appointment"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/appointment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointement" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_appointments"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/my_appointment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_appointement" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/waze"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/waze" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waze" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/change_appointment"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/change_appointment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_appointment" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_appointment"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/delete_appoitment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_appointment" />
        </LinearLayout>






    </GridLayout>


</LinearLayout>