<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTVHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_employe"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy"
            app:layout_constraintStart_toEndOf="@id/nameTVHeader"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin1">

        <TextView
            android:id="@+id/dateTVHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy"
            app:layout_constraintStart_toEndOf="@id/dateTVHeader"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="4dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin2">

        <TextView
            android:id="@+id/hourTVHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/hourTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy"
            app:layout_constraintStart_toEndOf="@id/hourTVHeader"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="4dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin3">

        <TextView
            android:id="@+id/branchTVHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/branch"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/branchTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dummy"
            app:layout_constraintStart_toEndOf="@id/hourTVHeader"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="4dp" />


    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="10dp"
        android:background="#D1D1D1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin4" />


    <ImageView
        android:id="@+id/editButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/removeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/remove"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>